Change for OW-97, 114, 115 and 116

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ACUO</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="dist/css/reset.css">
-    <link rel="stylesheet" href="src/static/react-dropzone/dropzone.min.css">
+    <link rel="stylesheet" href="src/static/react-dropzone/dropzone.css">
     <link rel="stylesheet" href="src/static/react-dropzone/filepicker.css">
 
 </head>
