Remove dist folder from source code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ACUO</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="dist/css/reset.css">
+    <!--<link rel="stylesheet" href="dist/css/reset.css">-->
     <link rel="stylesheet" href="css/react-dropzone/dropzone.css">
     <link rel="stylesheet" href="css/react-dropzone/filepicker.css">
 
